--- a/k8s_dashboard.yaml
+++ b/k8s_dashboard.yaml
@@ -1,36 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: go_gateteway_server
+  name: go-gateteway-dashboard
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: go_gateteway_server
+      name: go-gateteway-dashboard
   template:
     metadata:
       labels:
-        name: go_gateteway_server
+        name: go-gateteway-dashboard
     spec:
       containers:
-        - name: go_gateteway_server
-          image: go_gateteway_server
+        - name: go-gateteway-dashboard
+          image: go-gateteway-dashboard
+          imagePullPolicy: Never
           ports:
-            - containerPort: 8080
-            - containerPort: 4433
+            - containerPort: 8880
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: go_gateteway_server
+  name: go-gateteway-dashboard
 spec:
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: 8880
+      name: "dashboard"
+      targetPort: 8880
       protocol: TCP
-    - port: 4433
-      targetPort: 4433
-      protocol: TCP
+      nodePort: 30088
   type: NodePort
   selector:
-    name: go_gateteway_server
+    name: go-gateteway-dashboard
