--- a/dockerfile-dashboard
+++ b/dockerfile-dashboard
@@ -4,6 +4,6 @@ WORKDIR /go/src/app
 COPY . .
 #原始方式：直接镜像内打包编译
 #RUN export GO111MODULE=auto && export GOPROXY=https://goproxy.cn && go mod tidy
-#RUN go build -o go_gateway
+#RUN go build -o ./bin/go_gateway
 
 CMD ./bin/go_gateway -config=./conf/prod/ -endpoint=dashboard
