--- a/conf/dev/base.toml
+++ b/conf/dev/base.toml
@@ -16,6 +16,7 @@
 
 [session]
     redis_server = "127.0.0.1:6379"   #redis session server
+    redis_password = ""
 
 [log]
     log_level = "trace"         #日志打印最低级别
