--- a/conf/prod/base.toml
+++ b/conf/prod/base.toml
@@ -16,6 +16,7 @@
 
 [session]
     redis_server = "192.168.3.4:6379"   #redis session server
+    redis_password = ""
 
 [log]
     log_level = "trace"         #日志打印最低级别
