--- a/conf/prod/redis_map.toml
+++ b/conf/prod/redis_map.toml
@@ -3,6 +3,8 @@
     [list.default]
         proxy_list = ["192.168.3.4:6379"]
         conn_timeout = 500
+        password = ""
+        db = 0
         read_timeout = 1000
         write_timeout = 1000
         max_active = 200
